--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-lottie-player": "^1.5.4",
     "react-query": "^3.39.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.5",
