--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.17.2",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-countup": "^6.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
@@ -19,6 +20,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "swiper": "^9.0.5",
     "web-vitals": "^2.1.4"
   },
